--- a/RestaurantRater/Views/Shared/_Layout.cshtml
+++ b/RestaurantRater/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Rater Home", "Index", "Restaurant")</li>
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
@@ -33,7 +34,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Restaurant Rater</p>
+            <p>&copy; @DateTime.Now.Year - Resta</p>
         </footer>
     </div>
 
